--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Practice</title>
 </head>
     <body>
-
-            <button id="btn">Click me to say Hii</button>
-        
+        <h1>New Feature HAHA</h1>
+           <button id="btn">Click me to say Hii</button>
     </body>
 <script src="index.js"></script>
 </html>
