new changes to master

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Practice</title>
 </head>
     <body>
-<h2>This is Second Head
-        
-</h2>
+            <h2>This is Second Head</h2>
             <button id="btn">Click me to say Hii</button>
         
     </body>
