new changes made in new-branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
            <h1>New Feature HAHA</h1>
            <button id="btn">Click me to say Hii</button>
+            <p>new para</p>
     </body>
+
 <script src="index.js"></script>
 </html>
