--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Practice</title>
 </head>
     <body>
-           <h1>New Feature HAHA</h1>
-           <button id="btn">Click me to say Hii</button>
-            <p>new para</p>
+          <section>
+            <h1>New Feature HAHA</h1>
+            <button id="btn">Click me to say Hii</button>
+             <p>new para</p>
+          </section>
     </body>
-
 <script src="index.js"></script>
 </html>
